# wf-google-workspace-api

./: .env.example  .gitignore  Pipfile  README.md  api.py  app.py  auth.py  const.py  justfile  package-lock.json  package.json  pyproject.toml  serverless.yml
app/: __init__.py  auth.py  const.py  main.py  router_channels.py  router_groups.py  router_users.py
app/google/: directory.py
app/models/: group_member.py  members.py  watch.py
